blink text added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Cliquer sur l'icône bleu pour passer en plein écran</div>
+        <div class="title"><blink>Cliquer sur l'icône bleu pour passer en plein écran</blink></div>
       </div>
     </div>
   </body>
