--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Cliquer sur l'icône bleu pour passer en plein écran</div>
+        <div class="title" id="blink">Cliquer sur l'icône bleu pour passer en plein écran</div>
       </div>
     </div>
 	
 	<script type="text/javascript">
-        var blink = document.getElementByClassName('title');
+        var blink = document.getElementById('blink');
         setInterval(function() {
             blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
         }, 300);
